--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -1,15 +1,44 @@
-<title>Chess Recognition Website</title>
-<link rel="icon" type="image/x-icon" href="../static/favicon.ico">
 
-<h1>Chess Recognition Website</h1>
+<head>
+    <title>Chess Recognition Website</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='../static/favicon.ico') }}">
 
-<br> <br>
+    <h1>Chess Recognition Website</h1>
 
-<form method="POST">
-    <label for="prevFEN">Enter Previous FEN</label>
-    <input type="text" id="prevFEN" name="prevFEN" value="" placeholder="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR">
-    <input type="submit" value="Submit" id="submit" name="submit"><br>
-    <input type="button" id="webcam_btn" name="webcam_btn" value="Take Photo Of Game" >
-</form>
 
-<p>Here is your output FEN: {{text}}</p>
+    </head>
+
+    <br> <br>
+
+
+<body>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages %} {% if category ==
+    'error' %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
+
+    <form method="POST">
+        <label for="prevFEN">Enter Previous FEN</label>
+        <input type="text" id="prevFEN" name="prevFEN" value="" placeholder="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR">
+        <input type="submit" value="Submit" id="submit" name="submit"><br>
+        <input type="button" id="webcam_btn" name="webcam_btn" value="Take Photo Of Game" >
+    </form>
+
+    <p>Here is your output FEN: {{text}}</p>
+
+    <h1>Video Feed</h1>
+    <img src="{{ video_feed_url }}" alt="Video Feed">
+</body>
