--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -40,5 +40,5 @@
     <p>Here is your output FEN: {{text}}</p>
 
     <h1>Video Feed</h1>
-    <img src="{{ video_feed_url }}" alt="Video Feed">
+    <img src="{{ url_for('views.video_feed') }}" height="80%">
 </body>
